# backtraderCpp

./: CMakeLists.txt  README.md
lib/TalibForWin64/lib/: ta_abstract_cmr.lib  ta_func_cmr.lib  ta_libc_cmr.lib
lib/curl-7.63.0/libcurl-7.61.1-vc15-x64/lib/: libcurl.lib  readme.txt
lib/libwebsockets/libForLinux64/include/: lws_config.h
lib/libwebsockets/libForWin64/lws-x64-21261253/include/: lws_config.h
lib/libwebsockets/libForWin64/lws-x64-21261253/lib/Release/: protocol_client_loopback_test.exp  protocol_client_loopback_test.lib  protocol_dumb_increment.exp  protocol_dumb_increment.lib  protocol_lws_mirror.exp  protocol_lws_mirror.lib  protocol_lws_sshd_demo.exp  protocol_lws_sshd_demo.lib  protocol_lws_status.exp  protocol_lws_status.lib  protocol_lws_table_dirlisting.exp  protocol_lws_table_dirlisting.lib  protocol_post_demo.exp  protocol_post_demo.lib  websockets.exp  websockets.lib  websockets_static.lib
lib/log4cplus/libForWin64/: log4cplus.lib
lib/openssl-1.1.1a/libForLinux64/include/openssl/: opensslconf.h
lib/openssl-1.1.1a/libForWin64/openssl-1.1.1a-vc15-x64/lib/: libcrypto.lib  libssl.lib
src/: main.cpp
